optimize website on `mobile`

--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -20,7 +20,7 @@ const buttons = {
 }
 ---
 
-<header class="fixed z-[999] w-screen lg:mt-2 mt-9 pr-4">
+<header class="fixed z-[999] w-screen lg:mt-2 mt-9 pr-4 sm:pr-0">
   <div class="grid items-center grid-cols-3 mx-auto w-[60%] xl:w-[65%] lg:w-[95%]">
     <Button href={buttons.avatar.href} blank={buttons.avatar.blank} icon={buttons.avatar.icon} position={buttons.avatar.position} size={buttons.avatar.size} />
     <Tabs />
