--- a/src/components/index/ProjectsCards.astro
+++ b/src/components/index/ProjectsCards.astro
@@ -24,7 +24,7 @@ export const cardsStyle = 'rounded-[35px] sm:rounded-[20px] border-[1px] border-
             <img class="object-cover object-top w-full h-auto" src={i.data.image} alt={i.data.title} />
             <div class="flex flex-col justify-center items-center text-center text-custom-light-1 max-w-[70%] sm:max-w-[100%] sm:p-4 sm:pb-8 pt-4 px-8 pb-14 mt-auto">
               <h4 class="text-3xl font-medium sm:text-2xl">{i.data.title}</h4>
-              <p class="mt-4 text-sm sm:mt-3">{i.data.description}</p>
+              <p class="mt-4 text-sm sm:mt-2 sm:leading-snug">{i.data.description}</p>
             </div>
           </a>
         ))
