--- a/src/pages/works.astro
+++ b/src/pages/works.astro
@@ -5,7 +5,7 @@ import WorksCards from '../components/works/WorksCards.astro'
 
 const pageData = {
   page_path: 'works',
-  description: 'Привет! Я - веб-разработчик и дизайнер с опытом работы в создании креативных и функциональных веб-сайтов. Мои проекты сочетают в себе уникальный дизайн и высокую производительность, чтобы помочь вашему бизнесу выделиться в онлайн-мире. Посмотрите мое портфолио, чтобы узнать больше о моих навыках и достижениях в веб-разработке и дизайне.',
+  description: 'Привет! Я - веб-разработчик и дизайнер с опытом работы в создании креативных и функциональных веб-сайтов. Мои проекты сочетают в себе уникальный дизайн и высокую производительность, чтобы помочь вашему бизнесу выделиться в онлайн-мире. Посмотрите мое портфолио, чтобы узнать больше о моих навыках и достижениях в веб-разработке и дизайне. Я являюсь фрилансером с более 3 годами опыта работы.',
   hero: {
     textmono: "I'm Maxim Bozhik, crafting websites and interfaces",
     id_link: 'WORKS_CARDS',
