~ edit `description` of website

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import Hero from '../components/Hero/Hero.astro'
 import ProjectsCards from '../components/index/ProjectsCards.astro'
 
 const pageData = {
-  description: 'Привет! Я - веб-разработчик и дизайнер с опытом работы в создании креативных и функциональных веб-сайтов. Мои проекты сочетают в себе уникальный дизайн и высокую производительность, чтобы помочь вашему бизнесу выделиться в онлайн-мире. Посмотрите мое портфолио, чтобы узнать больше о моих навыках и достижениях в веб-разработке и дизайне. Я учусь в Высшей школе экономики на программе Дизайн и программирование.',
+  description: 'Привет! Я - веб-разработчик и дизайнер, занимаюсь созданием креативных и функциональных веб-сайтов. Мои проекты сочетают в себе уникальный дизайн и высокую производительность, чтобы помочь вашему бизнесу выделиться в онлайн-мире. Посмотрите мое портфолио, чтобы узнать больше о моих навыках и достижениях в веб-разработке и дизайне. Я учусь в Высшей школе экономики на программе Дизайн и программирование.',
   hero: {
     textmono: "I'm Maxim Bozhik, HSE design and programming student",
     id_link: 'PROJECTS_CARDS',
