add hover `animation` for `image` of work card

--- a/src/components/works/WorksCards.astro
+++ b/src/components/works/WorksCards.astro
@@ -41,7 +41,7 @@ const cardsPositioning = {
               )}
             </div>
 
-            <img class="z-10 w-[65%] sm:w-full object-cover" src={i.data.image} alt={`${i.data.title} WEBSITE`} />
+            <img class="z-10 w-[65%] sm:w-full object-cover group-hover:-translate-y-2 duration-500" src={i.data.image} alt={`${i.data.title} WEBSITE`} />
             <img class="absolute inset-0 " src="../../../card_default.png" alt={i.data.title} />
           </a>
         ))
