minor adaptive `Header`

--- a/src/components/Header/HeaderSwitch.astro
+++ b/src/components/Header/HeaderSwitch.astro
@@ -6,7 +6,7 @@ const buttonStyles = 'grid place-items-center z-10 text-base duration-200 lg:tex
 ---
 
 <div class="justify-self-center" transition:persist>
-  <div class="relative justify-center items-center flex w-[205px] px-[4px] lg:w-[155px] lg:h-[50px] h-[60px] bg-custom-dark-1 rounded-switch">
+  <div class="relative justify-center items-center flex w-[205px] px-[4px] lg:w-[155px] sm:w-[170px] xs:w-[155px] lg:h-[50px] h-[60px] bg-custom-dark-1 rounded-switch">
     <a id="PROJECTS_LINK" href="/" class={buttonStyles} data-action="left">{firstButton}</a>
     <a id="WORKS_LINK" href="/works/" class={buttonStyles} data-action="right">{secondButton}</a>
   </div>
