--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import Layout from '../layouts/Layout.astro'
 import Hero from '../components/Hero/Hero.astro'
 import ProjectsCards from '../components/index/ProjectsCards.astro'
+import Header from '../components/Header/Header.astro'
 
 const pageData = {
   description: 'Привет! Я - веб-разработчик и дизайнер, занимаюсь созданием креативных и функциональных веб-сайтов. Мои проекты сочетают в себе уникальный дизайн и высокую производительность, чтобы помочь вашему бизнесу выделиться в онлайн-мире. Посмотрите мое портфолио, чтобы узнать больше о моих навыках и достижениях в веб-разработке и дизайне. Я учусь в Высшей школе экономики на программе Дизайн и программирование.',
@@ -14,6 +15,7 @@ const pageData = {
 ---
 
 <Layout description={pageData.description}>
+  <Header />
   <Hero textmono_content={pageData.hero.textmono} id_link={pageData.hero.id_link} arrow_exist={pageData.hero.arrow_exist} />
   <ProjectsCards />
 </Layout>
