--- a/src/pages/contacts.astro
+++ b/src/pages/contacts.astro
@@ -33,7 +33,7 @@ const links = {
 <Layout page_path={pageData.page_path} description={pageData.description}>
   <HeaderMin />
 
-  <section data-section="HERO" class="inset-0 flex flex-col justify-center w-1/4 mx-auto text-center sm:w-[70%]" class:list={classes}>
+  <section class="inset-0 flex flex-col justify-center w-1/4 mx-auto text-center sm:w-[70%]" class:list={classes}>
     <TextMono transition="hero_text" content="FIND ME" classes="lg:w-4/5 mx-auto leading-[110%] sm:text-xl mt-0 text-gray-500" />
     <div class="flex flex-col gap-5 mt-10 sm:gap-5">
       {
