add `TechBadges` on `cv` page

--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -16,5 +16,22 @@ import TextMono from '../components/UI/TextMono.astro'
 
   <section class="inset-0 flex flex-col justify-center h-screen mx-auto text-center">
     <TextMono transition="hero_text" content="hey! i'm doing my cv.." classes="lg:w-4/5 mx-auto leading-[110%] text-white sm:text-xl mt-0 text-gray-500" />
+    <div class="mt-5 flex gap-2 justify-center">
+      <a href="https://astro.build/" target="_blank">
+        <TechBadge text="Astro" icon="../../public/tech/astro.svg" classes="hover:scale-105 duration-300 cursor-pointer" />
+      </a>
+      <a href="https://react.dev/" target="_blank">
+        <TechBadge text="React" icon="../../public/tech/react.svg" classes="hover:scale-105 duration-300 cursor-pointer" />
+      </a>
+      <a href="https://www.typescriptlang.org/" target="_blank">
+        <TechBadge text="Typescript" icon="../../public/tech/typescript.svg" classes="hover:scale-105 duration-300 cursor-pointer" />
+      </a>
+      <a href="https://tailwindcss.com/" target="_blank">
+        <TechBadge text="Tailwind" icon="../../public/tech/tailwind.svg" classes="hover:scale-105 duration-300 cursor-pointer" />
+      </a>
+      <a href="https://vitejs.dev/" target="_blank">
+        <TechBadge text="Typescript" icon="../../public/tech/vite.svg" classes="hover:scale-105 duration-300 cursor-pointer" />
+      </a>
+    </div>
   </section>
 </Layout>
