--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -30,7 +30,7 @@ import TextMono from '../components/UI/TextMono.astro'
         <TechBadge text="Tailwind" icon="../../public/tech/tailwind.svg" classes="hover:scale-105 duration-300 cursor-pointer" />
       </a>
       <a href="https://vitejs.dev/" target="_blank">
-        <TechBadge text="Typescript" icon="../../public/tech/vite.svg" classes="hover:scale-105 duration-300 cursor-pointer" />
+        <TechBadge text="Vite" icon="../../public/tech/vite.svg" classes="hover:scale-105 duration-300 cursor-pointer" />
       </a>
     </div>
   </section>
