make all `src` paths `absolute`
here is about this advice

--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -4,14 +4,14 @@ import Switch from './HeaderSwitch.astro'
 
 export const buttons = {
   avatar: {
-    icon: '../../../maks.png',
+    icon: '/maks.png',
     size: 's-9 -mt-2 lg:s-7',
     position: 'justify-self-start',
     href: '/contacts/',
     blank: '',
   },
   resume: {
-    icon: '../../../resume.png',
+    icon: '/resume.png',
     size: 's-6 -mt-[2px] lg:s-5',
     position: 'justify-self-end',
     href: '/cv/',
