--- a/src/pages/contacts.astro
+++ b/src/pages/contacts.astro
@@ -44,7 +44,7 @@ const links = {
                 <div class="z-10 w-full p-5 text-center">
                   <TextMono content={value.title} classes="lg:w-4/5 sm:w-auto mx-auto sm:text-xl leading-[110%] mt-0" />
                 </div>
-                <img class="absolute inset-0" src="../../../card_default.png" alt={value.title} />
+                <img class="absolute inset-0" src="/card_default.png" alt={value.title} />
               </a>
             ),
         )
