add `action` btn on `Hero` block

--- a/src/components/Hero/Hero.astro
+++ b/src/components/Hero/Hero.astro
@@ -3,6 +3,7 @@ import HeroArrow from './HeroArrow.astro'
 import HeroTitle from './HeroTitle.astro'
 import TextMono from '../UI/TextMono.astro'
 import HeroCaption from './HeroCaption.astro'
+import TechBadge from '../UI/TechBadge.astro'
 
 interface Props {
   textmono_content: string
@@ -16,6 +17,10 @@ const classes = '!h-[100svh] h-[100vh]'
 
 <section data-section="HERO" class="w-full inset-0 flex flex-col justify-center mx-auto text-center" class:list={classes}>
   <HeroTitle />
-  <TextMono transition="hero_text" content={textmono_content} classes="lg:w-4/5 mx-auto leading-[110%] xl:mt-4 mt-6" />
+  <TextMono transition:name="hero_text" content={textmono_content} classes="lg:w-4/5 mx-auto leading-[110%] xl:mt-4 mt-6" />
+
+  <a transition:name="hero_btn" href="https://t.me/bozzhik" target="_blank">
+    <TechBadge text="Hire me →" icon="" classes="hover:scale-105 duration-300 cursor-pointer mx-auto mt-5 px-2 animate-pulse" />
+  </a>
 </section>
 {arrow_exist ? <HeroArrow {id_link} /> : ''}
