--- a/src/pages/en/contacts.astro
+++ b/src/pages/en/contacts.astro
@@ -1,14 +1,14 @@
 ---
-import Layout from '../layouts/Layout.astro'
-import HeaderMin from '../components/Header/HeaderMin.astro'
+import Layout from '../../layouts/Layout.astro'
+import HeaderMin from '../../components/Header/HeaderMin.astro'
 
 const pageData = {
   page_path: 'works',
   description: 'Привет! Я - веб-разработчик и дизайнер, занимаюсь созданием креативных и функциональных веб-сайтов. Мои проекты сочетают в себе уникальный дизайн и высокую производительность, чтобы помочь вашему бизнесу выделиться в онлайн-мире. Посмотрите мое портфолио, чтобы узнать больше о моих навыках и достижениях в веб-разработке и дизайне. Я являюсь фрилансером с более 3 годами опыта работы.',
 }
 
-import {cardsStyle} from '../components/index/ProjectsCards.astro'
-import TextMono from '../components/UI/TextMono.astro'
+import {cardsStyle} from '../../components/index/ProjectsCards.astro'
+import TextMono from '../../components/UI/TextMono.astro'
 
 const classes = '!h-[100svh] h-[100vh]'
 
