--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import Header from '../components/Header/Header.astro'
 const pageData = {
   description: 'Привет! Я - веб-разработчик и дизайнер, занимаюсь созданием креативных и функциональных веб-сайтов. Мои проекты сочетают в себе уникальный дизайн и высокую производительность, чтобы помочь вашему бизнесу выделиться в онлайн-мире. Посмотрите мое портфолио, чтобы узнать больше о моих навыках и достижениях в веб-разработке и дизайне. Я учусь в Высшей школе экономики на программе Дизайн и программирование.',
   hero: {
-    textmono: "I'm Maxim Bozhik, HSE design and programming student",
+    textmono: 'Я Максим Божик, студент 3 курса "Дизайн и программирование" в ВШЭ',
     id_link: 'PROJECTS_CARDS',
     arrow_exist: true,
   },
