--- a/src/pages/contacts.astro
+++ b/src/pages/contacts.astro
@@ -14,16 +14,20 @@ const classes = '!h-[100svh] h-[100vh]'
 
 const links = {
   telegram: {
-    title: 'Telegram',
+    title: 'Телеграм',
     href: 'https://t.me/bozzhik',
   },
   vkontakte: {
-    title: 'VKontakte',
+    title: 'ВКонтакте',
     href: 'https://vk.com/bozzhik',
   },
   email: {
     title: 'bozzhik@ya.ru',
     href: 'mailto:bozzhik@ya.ru',
+  },
+  tel: {
+    title: '+7 (995) 120-03-13',
+    href: 'tel:+79951200313',
   },
 }
 ---
@@ -32,7 +36,7 @@ const links = {
   <HeaderMin />
 
   <section class="inset-0 flex flex-col justify-center w-1/4 mx-auto text-center sm:w-[70%]" class:list={classes}>
-    <TextMono transition="hero_text" content="FIND ME" classes="lg:w-4/5 mx-auto leading-[110%] sm:text-xl mt-0 text-gray-500" />
+    <TextMono transition="hero_text" content="Связаться со мной" classes="lg:w-4/5 text-purple-400 mx-auto leading-[110%] sm:text-xl mt-0 text-gray-500" />
     <div class="flex flex-col gap-5 mt-10 sm:gap-5">
       {
         Object.entries(links).map(
