translate `HeaderSwitch` to `ru`

--- a/src/components/Header/HeaderSwitch.astro
+++ b/src/components/Header/HeaderSwitch.astro
@@ -1,6 +1,6 @@
 ---
-const firstButton = 'Projects'
-const secondButton = 'Works'
+const firstButton = 'Проекты'
+const secondButton = 'Работы'
 
 const buttonStyles = 'grid place-items-center z-10 text-base duration-200 lg:text-sm hover:text-white text-gray-700 w-[48%] h-[80%] ease-in-out rounded-switch'
 ---
