--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -34,9 +34,9 @@ import TextMono from '../components/UI/TextMono.astro'
       </a>
     </div>
     <div class="flex flex-col mt-14 gap-3">
-      <TextMono transition="hero_text" content="Заказать создание сайта ↓" classes="lg:w-4/5 mx-auto leading-[110%] text-purple-400 text-white sm:text-xl mt-0 text-gray-500" />
-      <a transition:name="hero_btn" href="https://t.me/bozzhik" target="_blank">
-        <TechBadge text="Заказать разработку сайта →" icon="" classes="hover:scale-105 duration-300 cursor-pointer mx-auto px-2 animate-pulse" />
+      <TextMono transition="hero_text" content="Заказать создание сайта ↓" classes="lg:w-4/5 mx-auto leading-[110%] !text-purple-400 text-white sm:text-xl mt-0 text-gray-500" />
+      <a transition:name="hero_btn" href="/contacts/">
+        <TechBadge text="Заказать разработку сайта →" icon="" classes="hover:scale-105 duration-300 cursor-pointer mx-auto mt-5 px-3 animate-pulse" />
       </a>
     </div>
   </section>
