minor update of `form` async function due error

--- a/src/pages/contacts.astro
+++ b/src/pages/contacts.astro
@@ -112,6 +112,8 @@ const links = {
       console.error('Url:', url)
       console.error('Error:', err)
       console.error('Response:', err.response)
+
+      inputContact.value = 'Произошла ошибка!'
     }
   }
 
