--- a/src/pages/contacts.astro
+++ b/src/pages/contacts.astro
@@ -12,7 +12,7 @@ const pageData = {
 import {cardsStyle} from '../components/index/ProjectsCards.astro'
 import TextMono from '../components/UI/TextMono.astro'
 
-const classes = '!h-[100svh] h-[100vh]'
+const classes = '!h-[100svh] h-[100vh] sm:!h-auto sm:my-32'
 
 const links = {
   telegram: {
@@ -37,7 +37,7 @@ const links = {
 <Layout page_path={pageData.page_path} description={pageData.description}>
   <HeaderMin />
 
-  <section class="inset-0 flex flex-col justify-center w-1/4 mx-auto text-center sm:w-[70%]" class:list={classes}>
+  <section class="inset-0 flex flex-col justify-center w-1/4 mx-auto text-center sm:w-[80%]" class:list={classes}>
     <TextMono transition="hero_text" content="Свяжитесь со мной, чтобы заказть разработку сайта" classes="lg:w-4/5 mx-auto leading-[110%] sm:text-xl mt-0 text-gray-500 animate-pulse" />
     <div class="flex flex-col gap-5 mt-10 sm:gap-5">
       {
@@ -57,8 +57,8 @@ const links = {
     <div class="mt-14 flex flex-col gap-3">
       <TextMono transition="hero_text" content="Или оставьте заявку и я свяжусь с вами самостоятельно" classes="lg:w-4/5 mx-auto leading-[110%] sm:text-xl mt-0 text-gray-500 animate-pulse" />
       <form id="FORM" class="flex sm:flex-col h-fit gap-2 w-full justify-between mt-3 font-mono">
-        <input id="INPUT_CONTACT" class="outline-none placeholder:text-white w-[70%] text-xl sm:w-full duration-300 hover:bg-white/20" class:list={[badgeStyles]} placeholder="Введите ваш контакт" type="text" name="contact" />
-        <div id="FORM_BTN" class="cursor-pointer w-[30%] sm:w-full px-3 py-3 text-xl duration-300 hover:bg-white/20" class:list={[badgeStyles]}>Отправить</div>
+        <input id="INPUT_CONTACT" class="outline-none placeholder:text-white w-[70%] text-xl sm:text-lg sm:py-2 sm:w-full duration-300 hover:bg-white/20" class:list={[badgeStyles]} placeholder="Введите ваш контакт" type="text" name="contact" />
+        <div id="FORM_BTN" class="cursor-pointer w-[30%] sm:w-full px-3 py-3 text-xl sm:text-lg sm:py-2 duration-300 hover:bg-white/20" class:list={[badgeStyles]}>Отправить</div>
       </form>
     </div>
   </section>
