--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -16,7 +16,7 @@ import TextMono from '../components/UI/TextMono.astro'
 
   <section class="inset-0 flex flex-col justify-center h-screen mx-auto text-center">
     <TextMono transition="hero_text" content="привет! мое резюме в разработке.." classes="lg:w-4/5 mx-auto leading-[110%] text-white sm:text-xl mt-0 text-gray-500" />
-    <div class="mt-5 flex gap-2 justify-center">
+    <div class="mt-5 flex sm:flex-wrap gap-2 justify-center">
       <a href="https://astro.build/" target="_blank">
         <TechBadge text="Astro" icon="/tech/astro.svg" classes="hover:scale-105 duration-300 cursor-pointer" />
       </a>
@@ -36,7 +36,7 @@ import TextMono from '../components/UI/TextMono.astro'
     <div class="flex flex-col mt-14 gap-3">
       <TextMono transition="hero_text" content="Заказать создание сайта ↓" classes="lg:w-4/5 mx-auto leading-[110%] !text-purple-400 text-white sm:text-xl mt-0 text-gray-500" />
       <a transition:name="hero_btn" href="/contacts/">
-        <TechBadge text="Заказать разработку сайта →" icon="" classes="hover:scale-105 duration-300 cursor-pointer mx-auto mt-5 px-3 animate-pulse" />
+        <TechBadge text="Заказать разработку сайта →" icon="" classes="hover:scale-105 duration-300 cursor-pointer mx-auto sm:mt-1 mt-5 px-3 animate-pulse" />
       </a>
     </div>
   </section>
