--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -58,6 +58,10 @@ const lang = getLangFromUrl(Astro.url)
       [data-card] {
         background: linear-gradient(125deg, rgba(157, 157, 158, 0.1) 29%, rgba(17, 18, 27, 0) 100%);
       }
+
+      [data-badge] {
+        background: linear-gradient(125deg, rgba(157, 157, 158, 0.1) 49%, rgba(17, 18, 27, 0) 100%);
+      }
     </style>
   </body>
 </html>
