--- a/src/pages/en/cv.astro
+++ b/src/pages/en/cv.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from '../../layouts/Layout.astro'
 import HeaderMin from '../../components/Header/HeaderMin.astro'
-import TechBadge from '../../components/UI/TechBadge.astro'
+import Badge from '../../components/UI/Badge.astro'
 
 const pageData = {
   page_path: 'works',
@@ -18,19 +18,19 @@ import TextMono from '../../components/UI/TextMono.astro'
     <TextMono transition="hero_text" content="hey! i'm doing my cv.." classes="lg:w-4/5 mx-auto leading-[110%] text-white sm:text-xl mt-0 text-gray-500" />
     <div class="mt-5 flex gap-2 justify-center">
       <a href="https://astro.build/" target="_blank">
-        <TechBadge text="Astro" icon="/tech/astro.svg" classes="hover:scale-105 duration-300 cursor-pointer" />
+        <Badge text="Astro" icon="/tech/astro.svg" classes="hover:scale-105 duration-300 cursor-pointer" />
       </a>
       <a href="https://react.dev/" target="_blank">
-        <TechBadge text="React" icon="/tech/react.svg" classes="hover:scale-105 duration-300 cursor-pointer" />
+        <Badge text="React" icon="/tech/react.svg" classes="hover:scale-105 duration-300 cursor-pointer" />
       </a>
       <a href="https://www.typescriptlang.org/" target="_blank">
-        <TechBadge text="Typescript" icon="/tech/typescript.svg" classes="hover:scale-105 duration-300 cursor-pointer" />
+        <Badge text="Typescript" icon="/tech/typescript.svg" classes="hover:scale-105 duration-300 cursor-pointer" />
       </a>
       <a href="https://tailwindcss.com/" target="_blank">
-        <TechBadge text="Tailwind" icon="/tech/tailwind.svg" classes="hover:scale-105 duration-300 cursor-pointer" />
+        <Badge text="Tailwind" icon="/tech/tailwind.svg" classes="hover:scale-105 duration-300 cursor-pointer" />
       </a>
       <a href="https://vitejs.dev/" target="_blank">
-        <TechBadge text="Vite" icon="/tech/vite.svg" classes="hover:scale-105 duration-300 cursor-pointer" />
+        <Badge text="Vite" icon="/tech/vite.svg" classes="hover:scale-105 duration-300 cursor-pointer" />
       </a>
     </div>
   </section>
