--- a/src/components/UI/Badge.astro
+++ b/src/components/UI/Badge.astro
@@ -1,6 +1,4 @@
 ---
-import {badgeStyles} from './NewBadge.astro'
-
 interface Props {
   text: string
   icon?: string
@@ -8,9 +6,11 @@ interface Props {
 }
 
 const {text, icon, classes} = Astro.props as Props
+
+export const badgeStyles = 'p-1 px-[6px] text-sm leading-4 border rounded border-neutral-700 text-neutral-100' // bg-neutral-800
 ---
 
-<div class="inline-flex items-center gap-1 py-[6px] s-fit group text-base sm:text-sm" class:list={[badgeStyles, classes]}>
+<div data-badge class="inline-flex items-center gap-1 py-[6px] s-fit group text-base sm:text-sm" class:list={[badgeStyles, classes]}>
   {icon && <img class="object-contain duration-300 saturate-50 group-hover:saturate-100 s-4" src={icon} alt={text} />}
   <span class="mt-[2px]" set:html={text} />
 </div>
