--- a/src/pages/contacts.astro
+++ b/src/pages/contacts.astro
@@ -1,5 +1,5 @@
 ---
-import {badgeStyles} from '../components/UI/NewBadge.astro'
+import {badgeStyles} from '../components/UI/Badge.astro'
 
 import Layout from '../layouts/Layout.astro'
 import HeaderMin from '../components/Header/HeaderMin.astro'
