minor fix `contacts` form styles

--- a/src/pages/contacts.astro
+++ b/src/pages/contacts.astro
@@ -57,8 +57,8 @@ const links = {
     <div class="mt-14 flex flex-col gap-3">
       <TextMono transition="hero_text" content="Или оставьте заявку и я свяжусь с вами самостоятельно" classes="lg:w-4/5 mx-auto leading-[110%] sm:text-xl mt-0 text-gray-500 animate-pulse" />
       <form id="FORM" class="flex sm:flex-col h-fit gap-2 w-full justify-between mt-3 font-mono">
-        <input id="INPUT_CONTACT" class="outline-none placeholder:text-white w-[70%] text-xl sm:text-lg sm:py-2 sm:w-full duration-300 hover:bg-white/20" class:list={[badgeStyles]} placeholder="Введите ваш контакт" type="text" name="contact" />
-        <div id="FORM_BTN" class="cursor-pointer w-[30%] sm:w-full px-3 py-3 text-xl sm:text-lg sm:py-2 duration-300 hover:bg-white/20" class:list={[badgeStyles]}>Отправить</div>
+        <input id="INPUT_CONTACT" class="outline-none placeholder:text-white w-[70%] bg-transparent text-xl sm:text-lg sm:py-2 sm:w-full duration-300 hover:bg-white/10" class:list={[badgeStyles]} placeholder="Введите ваш контакт" type="text" name="contact" />
+        <div id="FORM_BTN" class="cursor-pointer w-[30%] sm:w-full px-3 py-3 text-xl sm:text-lg sm:py-2 duration-300 hover:bg-white/10" class:list={[badgeStyles]}>Отправить</div>
       </form>
     </div>
   </section>
