--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,6 +5,7 @@ import {getLangFromUrl} from '../i18n/utils'
 import BackgroundStars from '../components/BackgroundStars.astro'
 import Fonts from './Fonts.astro'
 import Analytics from './Analytics.astro'
+import SpeedInsights from '@vercel/speed-insights/astro'
 
 interface Props {
   page_name?: string
@@ -48,12 +49,14 @@ const lang = getLangFromUrl(Astro.url)
     <meta property="twitter:description" content={description} />
     <meta property="twitter:image" content="/seo.png" />
     <ViewTransitions />
+    <Analytics />
+    <SpeedInsights />
   </head>
   <body class="text-white bg-black font-grotesque">
     <BackgroundStars />
     <slot />
     <Fonts />
-    <Analytics />
+
     <style is:global>
       [data-card] {
         background: linear-gradient(125deg, rgba(157, 157, 158, 0.1) 29%, rgba(17, 18, 27, 0) 100%);
