add `murino arena` work card & init `next js` tech badge

--- a/src/components/works/WorksCards.astro
+++ b/src/components/works/WorksCards.astro
@@ -8,11 +8,12 @@ import {cardsStyle} from '../index/ProjectsCards.astro'
 import Badge from '../UI/Badge.astro'
 
 const cardsPositioning = {
-  TUTEA: 1,
-  'GRAPHITE HOUSE': 2,
-  MARAKU: 3,
-  'Dr. Spiller': 4,
-  RESTKERAMIKA: 5,
+  'МУРИНО АРЕНА': 1,
+  TUTEA: 2,
+  'GRAPHITE HOUSE': 3,
+  MARAKU: 4,
+  'Dr. Spiller': 5,
+  RESTKERAMIKA: 6,
 }
 ---
 
